--- a/styles/pages/checkout/checkout.css
+++ b/styles/pages/checkout/checkout.css
@@ -209,3 +209,18 @@
   margin-top: 11px;
   margin-bottom: 15px;
 }
+
+.quantity-input {
+  width: 30px;
+}
+
+.js-element-none {
+  display: none;
+}
+
+.is-editing-quantity {
+  display: initial;
+}
+
+
+
